tests/functionalTests/valid/code/putStrNewline.hs
main :: IO ();
main = putStr "\n";
