tests/functionalTests/invalid/code/intToPutStr.hs
main :: IO ();
main = putStr 5;